# airflow-provider-sample

./: .astro-registry.yaml  .gitignore  README.md  SAMPLE_README.md  pyproject.toml  setup.cfg  setup.py
greenplum_provider/: __init__.py
greenplum_provider/hooks/: greenplum_hook.py
greenplum_provider/operators/: greenplum_operator.py
greenplum_provider/sensors/: greenplum_sensor.py
modules/hooks/: sample_hook.py
modules/operators/: sample_operator.py
modules/sensors/: sample_sensor.py
sample_provider/: __init__.py
sample_provider/example_dags/: sample-dag.py  sample.py
sample_provider/hooks/: sample.py  sample_hook.py
sample_provider/operators/: sample.py  sample_operator.py
sample_provider/sensors/: sample.py  sample_sensor.py
tests/hooks/: test_greenplum_hook.py  test_sample_hook.py
tests/operators/: test_sample_operator.py
tests/sensors/: test_sample_sensor.py
