[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-greenplum"
authors = [
    { name = "Komarov Ilia", email = "ikomar@gmail.com" },

]
license = { text = "Apache License 2.0" }
description = "Copy of Postgres provider with changed connection type"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.4"
]

[project.urls]
Homepage = "https://astronomer.io"
Source = "https://github.com/ikomar-ru/airflow-provider-greenplum/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "greenplum_provider.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "greenplum_provider.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]
