# Configuration file for package setup

[metadata]
name = Airflow Backport provider: airflow-astronomer-sample-provider
summary = Sample provider built by Astronomer. Implements airflow-astronomer-sample-provider package
description-file = README.md
author = Apache Airflow PMC
author-email = dev@airflow.apache.org
license = Apache License, Version 2.0
license_files =
   LICENSE
   NOTICE

[bdist_wheel]
python-tag=py3

[files]
packages = *

[easy_install]

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party=airflow,tests
multi_line_output=5
profile = "black"